--- a/asciidra/pyproject.toml
+++ b/asciidra/pyproject.toml
@@ -12,8 +12,10 @@ dependencies = [
     "matplotlib>=3.10.7",
     "msgspec>=0.19.0",
     "numpy>=2.3.4",
+    "opencv-python>=4.11.0.86",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
+    "tqdm>=4.67.1",
     "tyro>=0.9.35",
 ]
 
@@ -31,6 +33,4 @@ requires = ["uv_build>=0.9.7,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = [
-    "pyqt6>=6.10.0",
-]
+dev = ["pyqt6>=6.10.0"]
