--- a/asciidra/pyproject.toml
+++ b/asciidra/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "msgspec>=0.19.0",
     "numpy>=2.3.4",
-    "opencv-python>=4.11.0.86",
+    "scikit-learn>=1.7.2",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
     "tqdm>=4.67.1",
