--- a/asciidra/pyproject.toml
+++ b/asciidra/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "einops>=0.8.1",
     "einx[torch]>=0.3.0",
     "imageio>=2.37.0",
+    "lpips>=0.1.4",
     "matplotlib>=3.10.7",
     "msgspec>=0.19.0",
     "numpy>=2.3.4",
